# Cmake_Demo

./: CMakeLists.txt  README.md  build.sh  main.c
func/: CMakeLists.txt
func/subfunc1/: sfunc1.c  sfunc1.h
func/subfunc2/: sfunc2.c  sfunc2.h
math/: CMakeLists.txt  mymath.c  mymath.h
math/add/: CMakeLists.txt  add.c  add.h
math/sub/: CMakeLists.txt  sub.c  sub.h
toolchain/: arm-linux.cmake
