project(Main)

message(${CMAKE_SYSTEM_NAME})
message(${CMAKE_SYSTEM_PROCESSOR})

SET(MY_TARGET main)
SET(EXTRA_LIBS ${EXTRA_LIBS} math)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_SUBDIRECTORY(math)

INCLUDE_DIRECTORIES(
	. 
	${PROJECT_SOURCE_DIR}/math
	${PROJECT_SOURCE_DIR}/math/add
	${PROJECT_SOURCE_DIR}/math/sub)

ADD_EXECUTABLE(${MY_TARGET} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${MY_TARGET} ${EXTRA_LIBS})

